<resources>
    <string name="app_name">Beroepsproduct4</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="helloworldtest">Hello World!</string>
    <string name="inlognaam">Inlognaam:</string>
    <string name="wachtwoord">Wachtwoord:</string>
    <string name="hintinlognaam">Inlognaam</string>
    <string name="hintwachtwoord">Wachtwoord</string>
    <string name="knopregistreren">Registreren</string>
    <string name="wiltuinloggen">Wilt u inloggen? Klik dan hier.</string>
    <string name="emailadres">Emailadres:</string>
    <string name="hintemailadres">Emailadres</string>
    <string name="knopinloggen">Inloggen</string>
    <string name="inlogtitel">Inloggen</string>
    <string name="wilturegistreren">Wilt u registreren? klik dan hier.</string>
    <string name="titelregistreren">Registreren</string>
    <string name="knopuitlog">Uitloggen</string>
    <string name="toastinlogmislukt">Inloggen mislukt probeer het opnieuw. </string>
    <string name="toastregistrerenmislukt">Registreren mislukt probeer het opnieuw. </string>
    <string name="toastregistrerensuccesvol">Registreren Succesvol. Klik op de knop inloggen om in te loggen.</string>
    <string name="toastbezigmetregistreren">Bezig met registreren...</string>
    <string name="toastinlogsuccesvol">Inloggen Succesvol.</string>
    <string name="toastgeenemail">Vul alstublieft een emailadres in.</string>
    <string name="toastgeenwachtwoord">Vul alstublieft een wachtwoord in.</string>
    <string name="toastgeennaam">Vul alstublieft een naam in.</string>
    <string name="toastgeencheckbox">Je moet het vierkantje hieronder aanvinken voordat je kan inloggen.</string>
    <string name="toastbezigmetinloggen">Bezig met inloggen... </string>
    <string name="vulhierinevenement">Vul hier een evenementnaam in</string>
    <string name="vulhierinlocatie">Vul hier de locatie van het evenement in</string>
    <string name="vulhierinbeschrijving">Vul hier de beschrijving in</string>
    <string name="knopopslaan">Opslaan</string>
    <string name="ikgaakkoordAVG">Ik ga akkoord met het feit dat andere gebruikers mijn gegevens kunnen inzien.</string>
    <string name="zoekpersoon">Klik op de persoon die jij zoekt</string>
    <string name="naam">Volledige naam:</string>
    <string name="hintnaam">Naam</string>
    <string name="slamijnnaamop">Sla mijn naam en email op zodat deze later in de app gebruikt kunnen worden.</string>
    <string name="profielfoto">Profielfoto:</string>
    <string name="titelevenementaanmaken">Evenement Aanmaken</string>
    <string name="hintevenementdatum">Vul hier de datum in</string>
    <string name="titelafbevenement">Druk op de plus om een afbeelding aan het evenement te koppelen</string>
    <string name="toastevenementtoegevoegd">Evenement Toegevoegd</string>
    <string name="toastfotoopgeslagen">Foto opgeslagen</string>
    <string name="toastfotonietopgeslagen">Foto niet opgeslagen probeer opnieuw</string>
    <string name="zin1">Wat is het weer een leuke dag vandaag!</string>
    <string name="zin2">Ik hoop dat je blij bent!</string>
    <string name="zin3">Wat een mooie dag!</string>
    <string name="zin4">Super leuk je weer te zien!</string>
    <string name="zin5">Heb je weer zin om de app te gebruiken?</string>
    <string name="toastpersoondataaangepast">Persoondata Aangepast</string>
    <string name="toastvulnaamenmailin">Vul alstublieft een naam en emailadres in.</string>
    <string name="streepjesommenuteopenen">Druk op de drie streepjes boven de pijl om het menu te openen.</string>
    <string name="goedemorgen">Goedemorgen,</string>
    <string name="goedemiddag">Goedemiddag,</string>
    <string name="goedeavond">Goedeavond,</string>
    <string name="sn_naam">Naam :</string>
    <string name="sn_aantalleden">Aantal leden in het Sociaal Netwerk :</string>
    <string name="sn_beschrijving"> Beschrijving :</string>
    <string name="sn_lidworden">Lid worden</string>
    <string name="sn_nietlidworden">Verder zoeken</string>
    <string name="goedenacht">Goedenacht</string>
    <string name="woonplaats">Woonplaats</string>
    <string name="geboortedatum">Geboortedatum:</string>
    <string name="sport">Sport</string>
    <string name="huisdier">Huisdier</string>
    <string name="tvprogramma">Tv-Programma</string>
    <string name="website">Website</string>
    <string name="hintwebsite">Favoriete Website</string>
    <string name="hinttvprogramma">Favoriete Tv Programma</string>
    <string name="hinthuisdier">Favoriete Huisdier</string>
    <string name="hintsport">Favoriete Sport</string>
    <string name="hintgeboortedatum">Vul hier je geboortedatum in</string>
    <string name="hintwoonplaats">Vul hier je woonplaats in.</string>
    <string name="locatie">Locatie:</string>
    <string name="datum">Datum:</string>
    <string name="beschrijving">Beschrijving:</string>
    <string name="btnikwilsamen">Ik wil samen</string>
    <string name="btnikwilalleen">Ik wil Alleen</string>
    <string name="btnikwilniet">Ik wil Niet</string>

    //Rens
    //sn aanmaken
    <string name="titelsnaanmaken"> Sociaal Netwerk aanmaken</string>
    <string name="snvulinsnnaam"> Vul naam in van Sociaal Netwerk</string>
    <string name="snvulinbeschrijving"> Beschrijf het Sociaal Netwerk</string>
    <string name="snafbeelding">Druk op de plus om een afbeelding aan het Sociaal Netwerk te koppelen</string>


</resources>
