<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".EvenementAanmaken">


    <TextView
        android:id="@+id/snAanmakenTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_header"
        android:gravity="center"
        android:text="@string/titelsnaanmaken"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snafbeelding" />

    <ImageButton
        android:id="@+id/ibAfbeeldingSociaalNetwerk"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:onClick="btnEvenementFoto"
        android:src="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/editTextSociaalNetwerk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/snvulinsnnaam"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextBeschrijvingSociaalNetwerk"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/snvulinbeschrijving"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnOpslaanaSN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_oranje"
        android:text="@string/knopopslaan" />
</LinearLayout>