<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnderenZoeken"

    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <GridLayout
        android:layout_width="383dp"
        android:layout_height="161dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="131dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/sn_naam" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="132dp"
            android:layout_height="45dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/sn_aantalleden" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="125dp"
            android:layout_height="30dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/sn_beschrijving" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/sn_naam"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/sn_aantalleden"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/sn_beschrijving"
            android:inputType="textPersonName" />
    </GridLayout>

    <GridLayout
        android:layout_width="395dp"
        android:layout_height="114dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button6"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/sn_custom_button"
            android:color="@color/Groen"
            android:text="@string/sn_lidworden" />

        <Button
            android:id="@+id/button5"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/sn_custom_button_verder"
            android:color="@color/Rood"
            android:text="@string/sn_nietlidworden" />
    </GridLayout>

</LinearLayout>